Added new views, db updates

--- a/ElementFactory/Views/Home/Index.cshtml
+++ b/ElementFactory/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Text.Json;
 @using System.Text.Json.Serialization;
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Hачало";
 }
 @model List<ElementFactory.Data.Models.ChemicalElement>
 
