--- a/ElementFactory/Views/Home/Welcome.cshtml
+++ b/ElementFactory/Views/Home/Welcome.cshtml
@@ -1,2 +1,44 @@
-﻿<h1>Welcome to our site!</h1>
-<a asp-action="Index" asp-controller="Home">Начало</a>
+﻿@{
+    ViewBag.Title = "Добре дошли";
+}
+<div class="welcomePageContainer">
+    <header>
+        <h1>Здравейте и добре дошли!</h1>
+    </header>
+    <main>
+        <article>
+            <p>
+                Проектът "Кодът в химията" ще Ви представи различни аспекти от
+                химията около нас!
+            </p>
+        </article>
+        <article>
+            <p>
+                Ще се запознаем най-използвания инструмент от химиците - Периодичната таблица,
+                като ще видите различни нейни функционалности, които ще
+                улеснят придобиването и утвърдяването на знания по химия!
+            </p>
+        </article>
+        <article>
+            <p>
+                Хората, и по-специфично учениците, които искат да проверят
+                знанията си по предмета, могат да изберат от нашите
+                тестове, в зависимост от класа и материала, по когото
+                искат да се подготвят.
+            </p>
+        </article>
+        <article>
+            <p>
+                Това приложение не е само за любознателните и умните, но и за хората,
+                които искат да придобият трайни и бързи знания по предмета. Предлагаме
+                нагледност, бързодействие и функционалност!
+            </p>
+        </article>
+    </main>
+
+    <section class="hyperlink">
+        <a asp-action="Index" asp-controller="Home">Какво чакаш? Да започваме!</a>
+    </section>
+
+    <footer>&copy; Element Factory</footer>
+</div>
