--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -1,4 +1,6 @@
-:root{
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@300&family=Roboto+Condensed:wght@100&display=swap');
+
+:root {
     --borderPixels: 3px;
     --borderType: solid;
 }
@@ -317,3 +319,102 @@ form td p
 .bg-black{
     color: white;
 }
+
+/* ------------------------------ */
+/* Choose a class page css */
+
+.classesViewContainer .classesContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.classesViewContainer .classesContainer button {
+    padding: 17px 40px;
+    border-radius: 50px;
+    cursor: pointer;
+    border: 0;
+    background-color: white;
+    box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-size: 25px;
+    transition: all 0.5s ease;
+    margin: 12px;
+}
+
+.classesViewContainer .classesContainer button:hover {
+    letter-spacing: 3px;
+    background-color: hsl(261deg 80% 48%);
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(93 24 220) 0px 7px 29px 0px;
+    transform: translateY(4px);
+}
+
+.classesViewContainer .classesTitle {
+    color: white;
+    text-align: center;
+    margin: 0;
+    font-size: 62px;
+}
+
+/* ------------------------------ */
+
+/* ------------------------------ */
+/* Welcome page css */
+
+.welcomePageContainer {
+    color: white;
+    font-family: 'Recursive', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 12px;
+    padding-top: 0;
+}
+
+.welcomePageContainer h1 {
+        font-size: 62px;
+        margin-bottom: 24px;
+        font-weight: 900;
+        padding: 0 12px
+    }
+
+.welcomePageContainer main{
+    display: flex;
+    flex-direction: column;
+    padding: 0 12px;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.welcomePageContainer a {
+        font-size: 25px;
+        text-decoration: none;
+        color: #E5E4E2;
+        padding-left: 20px;
+        background-color: #4E5180;
+        font-weight: 700;
+        padding: 12px;
+        border-radius: 18px;
+    }
+
+.welcomePageContainer a:hover {
+            background-color: hsl(261deg 80% 48%);
+            color: hsl(0, 0%, 100%);
+            box-shadow: rgb(93 24 220) 0px 7px 29px 0px;
+            transform: translateY(-4px);
+            transition: 300ms;
+        }
+
+.welcomePageContainer .hyperlink{
+    display: flex;
+    justify-content: right;
+    margin-right: 20px;
+}
+
+.welcomePageContainer footer{
+    font-size: 28px;
+    margin-top: 30px;
+}
+
+/* ------------------------------ */
