Implemented pop-up container css and some database updates

--- a/ElementFactory/Views/Home/Welcome.cshtml
+++ b/ElementFactory/Views/Home/Welcome.cshtml
@@ -14,7 +14,7 @@
         </article>
         <article>
             <p>
-                Ще се запознаем най-използвания инструмент от химиците - Периодичната таблица,
+                Ще се запознаем с най-използвания инструмент от химиците - Периодичната таблица,
                 като ще видите различни нейни функционалности, които ще
                 улеснят придобиването и утвърдяването на знания по химия!
             </p>
@@ -37,7 +37,7 @@
     </main>
 
     <section class="hyperlink">
-        <a asp-action="Index" asp-controller="Home">Какво чакаш? Да започваме!</a>
+        <a asp-action="LoadTable" asp-controller="Home">Какво чакаш? Да започваме!</a>
     </section>
 
     <footer>&copy; Element Factory</footer>
