--- a/ElementFactory/Views/Shared/_Layout.cshtml
+++ b/ElementFactory/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LoadTable">Начало</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Questions" asp-action="Classes">Въпроси</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="Classes">Тестове и Въпроси</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -34,6 +34,9 @@
         </nav>
     </header>
     @RenderBody()
+    <footer class="appFooter">
+        <p>&copy; Element Factory</p>
+    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
