--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -672,3 +672,58 @@ form td p
 }
 
 /* ------------------------------ */
+
+/* ------------------------------ */
+/* Add a test page css */
+
+#addTestForm {
+    background-color: white;    
+    padding: 20px;
+    margin: 40px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 16px;
+    border: 1px solid black;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 24px;
+}
+
+#addTestForm label{
+    margin: 10px 0;
+    text-align: center;
+    font-size: 28px;
+}
+
+#addTestForm input{
+    border: 0.5px solid black;
+    border-radius: 4px;
+    display: block;
+    text-align: center;
+    margin-bottom: 6px;
+}
+
+#addTestForm input[type="submit"] {
+    margin-top: 8px;
+}
+
+#addTestForm input[type="submit"]:hover {
+    background-color: hsl(261deg 80% 48%);
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(93 24 220) 0px 7px 29px 0px;
+    transition: 300ms;
+    border: none;
+}
+
+#addTestForm .aspValidationTitle {
+    padding: 20px;
+    background-color: #9b111e;
+    border-radius: 6px;
+    width: 70%;
+}
+
+#addTestForm select option:focus-within {
+    background-color: red;
+}
+/* ------------------------------ */
