--- a/ElementFactory/Views/Home/Index.cshtml
+++ b/ElementFactory/Views/Home/Index.cshtml
@@ -128,5 +128,5 @@
          ReferenceHandler = ReferenceHandler.IgnoreCycles
     });
 }
-<script src="~/js/createDOM.js" asp-append-version="true"></script>
+<script src="~/js/createDOM.js" asp-append-version="true" onload="window.AddValidation"></script>
 <script src="/js/listItems.js" asp-append-version="true" onload="PageSettings(@modelJson)"></script>
