--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -660,18 +660,6 @@ form td p
 /* ------------------------------ */
 
 /* ------------------------------ */
-/* ASP.NET Core validation css */
-
-.aspValidationTitle {
-    color: white;
-    background-color: red;
-    display: block;
-    padding: 1px;
-}
-
-/* ------------------------------ */
-
-/* ------------------------------ */
 /* Other options css */
 
 .scrollClass {
@@ -722,6 +710,7 @@ form td p
     display: block;
     text-align: center;
     margin-bottom: 6px;
+    width: 80%;
 }
 
 #addTestForm input[type="submit"],
@@ -740,10 +729,15 @@ form td p
 
 #addTestForm .aspValidationTitle,
 #editTestForm .aspValidationTitle {
-    padding: 20px;
     background-color: #9b111e;
     border-radius: 6px;
-    width: 70%;
+    color: white;
+}
+
+#addTestForm span,
+#editTestForm span{
+    width: 80%;
+    text-align: center;
 }
 
 /* ------------------------------ */
