--- a/ElementFactory/Views/Shared/_Layout.cshtml
+++ b/ElementFactory/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="bg">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -27,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="Classes">Тестове и Въпроси</a>
                         </li>
+                        @if(User.IsInRole("Admin")){
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="SeeAllUsers">Всички потребители</a>
+                            </li>
+                        }  
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
