--- a/ElementFactory/Views/Shared/_LoginPartial.cshtml
+++ b/ElementFactory/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,27 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using ElementFactory.Data.Models;
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+       <a class="nav-link text-dark" asp-controller="User" asp-action="LoadProfile">Моят профил</a>
     </li>
     <li class="nav-item">
             <form class="form-inline" asp-controller="User" asp-action="Logout" asp-area="Identity" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark">Излизане</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-controller="User" asp-action="Register">Register</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-controller="User" asp-action="Register">Регистриране</a>
     </li>
     <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-controller="User" asp-action="Login">Login</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-controller="User" asp-action="Login">Влизане</a>
     </li>
 }
 </ul>
