--- a/ElementFactory/Views/User/Register.cshtml
+++ b/ElementFactory/Views/User/Register.cshtml
@@ -2,9 +2,9 @@
 @using ElementFactory.Models.Register;
 @model RegisterViewModel
 @{
-    ViewData["Title"] = "Register";
+    ViewBag.Title = "Register";
 }
-<h1 class="text-center">@ViewData["Title"]</h1>
+<h1 class="text-center">@ViewBag.Title</h1>
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
