--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -8,13 +8,13 @@
 /* ------------------------------ */
 /* Main page / table css */
 
-body 
-{
+body {
     height: 100vh;
-    background-color: #090947;
-    background-image: linear-gradient(315deg, #090947 0%, #5a585a 74%);
+    background: rgb(108,168,255);
+    background: linear-gradient(to bottom right, rgba(108,168,255,1) 0%, rgba(148,152,255,1) 9%, rgba(147,136,255,1) 28%, rgba(94,167,255,1) 50%, rgba(135,137,255,1) 68%, rgba(155,154,255,1) 90%, rgba(117,164,255,1) 100%);
     overflow: hidden;
 }
+
 
 form {
     display: flex;
@@ -741,3 +741,81 @@ form td p
 }
 
 /* ------------------------------ */
+
+/* ------------------------------ */
+/* See all users page css */
+
+.allUsersContainer{
+    margin:3%;
+    display:flex;
+    flex-wrap:wrap;
+    
+}
+
+.currentUserContainer{
+    box-sizing:border-box;
+    display:flex;
+    flex-direction:column;
+    flex-wrap:nowrap;
+    border:3px solid black;
+    padding:2vh 2vw;
+    background-color:white;
+    width:25vw;
+    height:50vh;
+    box-shadow:darkgray 7px 7px; 
+    margin:0vh 5vw 3vh 0vw;
+    justify-content:space-evenly;      
+}
+.currentUserContainer:hover {
+    background-color: lightgray;
+    box-shadow: gray 7px 7px;
+    transition: 0.2s;
+}
+
+.currentUserContainer .infoUserContainer{
+    display: flex;
+}
+
+.currentUserContainer .infoUserContainer *{
+   width:50%;
+   margin:2vh 0vw 2vh 0vw;
+}
+
+.currentUserContainer .infoUserContainer *:nth-child(1) {
+   text-align: center;
+}
+
+.currentUserContainer .infoUserContainer *:nth-child(1) {
+    margin-right: 2vw;
+}
+.currentUserContainer .infoUserContainer .userButton {
+    border: 2px solid darkgreen;
+    text-decoration: none;
+    background-color: lightgreen;
+    border-radius: 60px;
+    text-align: center;
+    color: black;
+    font-size:14px;
+    cursor: pointer;
+}
+.currentUserContainer .infoUserContainer #removeButtonUser {
+    padding-top:3.1%;
+}
+
+#noUsers{
+    background-color:antiquewhite;
+    text-align:center;
+    height:10vh;
+    padding-top:2.6vh;
+    font-weight:700;
+    font-size:25px;
+    width:50%;
+    border-radius:16px;
+    margin:0 auto;
+}
+
+/* ------------------------------ */
+
+
+
+
