--- a/ElementFactory/Views/Question/ShowTestResult.cshtml
+++ b/ElementFactory/Views/Question/ShowTestResult.cshtml
@@ -1,9 +1,27 @@
 ﻿@using ElementFactory.Models.Others;
 @model ShowTestResultViewModel
 
+@{
+    ViewBag.Title = "Резултат от тест";
+    var points = int.Parse(Model.CorrectAnswers) * 5;
+}
+
 <div class="testResultContainer">
-    <h2>@Model.CorrectAnswers</h2>
-    <h3>@Model.ClassCategory</h3>
-    <a asp-controller="Home" asp-action="LoadTable">Върни се в началото</a>
-    <a asp-controller="Home" asp-action="LoadTable">Още тестове</a>
+    <h2>Резултат от теста:</h2>
+
+    <h2>Брой верни отговори: @Model.CorrectAnswers / @Model.Questions</h2>
+    <h2>Брой спечелени точки: @points</h2>
+   
+    <div class="testResultBtns">
+        <a class="testResultBtn" 
+            asp-controller="Home" 
+            asp-action="LoadTable"
+        >Върни се в началото</a>
+
+        <a class="testResultBtn"
+        asp-controller="Question" 
+        asp-action="TestsByGrade"
+        asp-route-grade="@Model.ClassCategory"
+        >Още тестове</a>
+    </div>
 </div>
