--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -975,3 +975,65 @@ form td p
 
 /* ------------------------------ */
 
+/* ------------------------------ */
+/* Add questions page css */
+
+.addQuestionsOnOwnFormContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+}
+
+.addQuestionsOnOwnFormContainer input{
+    border-radius: 16px;
+    border: 1px solid black;
+    padding: 6px;
+}
+
+.addQuestionsOnOwnSubmitBtn {
+    background-color: hsl(261deg 90% 48%);
+    color: white;
+    padding: 20px;
+    font-size: 24px;
+    margin-top: 12px;
+    border: none;
+}
+
+.addQuestionsOnOwnSubmitBtn:hover{
+    background-color: hsl(261deg 90% 28%);
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(93 24 220) 0px 7px 29px 0px;
+    transform: translateY(-4px);
+    transition: 300ms;
+    letter-spacing: 1px;
+    border: none;
+}
+
+.addedQuestionsContainer {
+    margin: 20px;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.addedQuestionAnswer{
+    font-size: 24px;
+}
+
+.addQuestionsOnOwnEditBtn,
+.addQuestionsOnOwnDeleteBtn {
+    padding: 12px;
+    font-size: 18px;
+    border-radius: 16px;
+    border: none;
+}
+
+.addQuestionsOnOwnEditBtn{
+    background-color: darkorange;
+}
+
+.addQuestionsOnOwnDeleteBtn{
+    background-color: red;
+}
+
+/* ------------------------------ */
